--- a/dedup_tutorial.ipynb
+++ b/dedup_tutorial.ipynb
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "deduped_corpus: deduplicated된 문서들 (List[List[str]])\n",
+    "deduped_corpus: deduplicated된 문서들 (List[List[str]])<\br>",
     "removed_corpus: 제거의 기준이 된 문서와 제거된 문서의 쌍들 (List[List[Tuple[str, str]]])"
    ]
   }
